# CW5sql

./: README.md  config.py  database.ini  pyproject.toml
src/: create_db.py
