[tool.poetry]
name = "cw5sql"
version = "0.1.0"
description = ""
authors = ["pavelpugacenko <pugachenkopavel72@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg2 = "^2.9.10"
requests = "^2.32.3"
config = "^0.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
